Updated the link

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         </div>
       </div>
       <small>
-        <a href="https://github.com/66Meg20/vanilla-weather-app" target="_blank"
+        <a
+          href="https://github.com/66Meg20/my-vanilla-weather-app"
+          target="_blank"
           >Open-source code</a
         >
         by Megan Jackson
