--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
               <div class="d-flex weather-temperature">
                 <img src="" alt="clear" id="icon" />
                 <strong id="temperature"></strong>
-                <span class="units">°C | <a href="#">°F</a></span>
+                <span class="units"
+                  ><a href="#" id="celcius-link" class="active"> °C</a> |
+                  <a href="#" id="fahrenheit-link" class="unit2">°F</a></span
+                >
               </div>
             </div>
             <div class="col-6">
