--- a/index.html
+++ b/index.html
@@ -65,24 +65,9 @@
               </ul>
             </div>
           </div>
-          <div class="weather-forecast">
-            <div class="row">
-              <div class="col-2">
-                <div class="weather-forecast-date">Thu</div>
-                <img
-                  src="http://openweathermap.org/img/wn/01n@2x.png"
-                  alt="icon"
-                  width="40"
-                />
-                <div class="weather-forecast-temperature">
-                  <span class="weather-forecast-temperature-max"> 18° </span>
-                  <span class="weather-forecast-temperature-min"> 12° </span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <small>
+        <div class="weather-forecast" id="forecast"></div>
+      </div>
+       <small>
           <a
             href="https://github.com/66Meg20/my-vanilla-weather-app"
             target="_blank"
@@ -90,7 +75,6 @@
           >
           by Megan Jackson
         </small>
-      </div>
     </div>
     <script src="src/app.js"></script>
   </body>
