Removed the celsius conversion

--- a/index.html
+++ b/index.html
@@ -53,15 +53,14 @@
                 <img src="" alt="clear" id="icon" />
                 <strong id="temperature"></strong>
                 <span class="units"
-                  ><a href="#" id="celcius-link" class="active"> °C</a> |
-                  <a href="#" id="fahrenheit-link" class="unit2">°F</a></span
+                  >°F</span
                 >
               </div>
             </div>
             <div class="col-6">
               <ul>
                 <li>Humidity: <span id="humidity"></span>%</li>
-                <li>Wind: <span id="wind-speed"></span> km/h</li>
+                <li>Wind: <span id="wind-speed"></span> mph</li>
               </ul>
             </div>
           </div>
